# leaders2021

./: .gitignore  Dockerfile  README.md  docker-compose.yml  jupyter.sh  pyproject.toml
research/: compose-and-scale-sportzones-map.ipynb  scale-map.ipynb  sportzone-heatmap.ipynb  upload-coordinates.ipynb  upload-dataset-to-postgres.ipynb  upload-density-matrixes.ipynb  upload-districs.ipynb  visualize-population-density.ipynb
