[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Ivan Reshetnikov"]
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "~=3.8"
flask = "~=1.1.2"
jupyterlab = "~=3.1.11"
psycopg2-binary = "~=2.9.1"
pandas = "~=1.3.3"
SQLAlchemy = "~=1.4.23"
openpyxl = "~=3.0.8"
plotly = "~=5.3.1"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiofiles = "~=0.7.0"
Pillow = "~=8.3.2"
ipyleaflet = "~=0.14.0"
seaborn = "~=0.11.2"
haversine = "~=2.5.1"
